2015-08-18  Daniel C. Dillon <dcdillon@gmail.com>

	* inst/include/RcppGSLForward: Rework vector_view and matrix_view to
	better support const variants
	* inst/include/RcppGSL_types.h: Idem
	* inst/examples/RcppGSLExample/src/colNorm.cpp: Update usage example
	* inst/unitTests/cpp/gsl.cpp: Update unite tests

2015-08-18  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/RcppGSLExample/src/colNorm.cpp: Use 'const &'

2015-08-16  Daniel C. Dillon <dcdillon@gmail.com>

	* inst/include/RcppGSLForward: Add support for const references
	* inst/include/RcppGSL_types.h: Idem

	* src/fastLm: Use 'const &' in function interface

2015-07-27  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppGSL-intro.Rnw (Rcpp): Added GSL usage table

2015-07-23  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppGSL-intro.Rnw: Several small updates and edits

2015-07-20  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppGSL_typedef.h: Also define MatrixView and VectorView

2015-07-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/fastLm.cpp: Simplified thanks to reference counting and
	improved object management: GSL objects now in signature, and no
	longer require an explicit free() call (but still allow it).

	* inst/examples/RcppGSLExample: idem
	* inst/examples/bSpline: idem

	* vignettes/RcppGSL-intro.Rnw: idem

	* inst/include/*: Consistent indentation and whitespace

	* inst/include/RcppGSL_typedef.h: Define Matrix and Vector shorthands

2015-07-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/macros/RCPPGSL_SPEC.h: Add boolean to check whether
	'data' remains allocated, and use it to free resources in destructor

2015-07-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.5

	* NAMESPACE: Added now-required importFrom() statements

	* DESCRIPTION: Added Imports: stats

2015-07-04  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppGSL-intro.Rnw (Rcpp): Updated and edited throughout.

2015-06-27  Dirk Eddelbuettel  <edd@debian.org>
