@@ -1,3 +1,7 @@
+2015-08-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/examples/bSpline/bSpline.cpp: Updated example
+
 2015-08-18  Daniel C. Dillon <dcdillon@gmail.com>
 
 	* inst/include/RcppGSLForward: Rework vector_view and matrix_view to
